Lots of fixes (look at description of the commit)
Fixed background image,
Fixed duck movements,
Fixed timer not showing,
Fixed gunsound audio,
localStorage instead of .txt, PHP and SQL,
Ducks flips when ducks goes to the left or right,

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,6 +14,11 @@ body {
   flex-direction: column;
   overflow: hidden;
   background-image: url(https://raw.githubusercontent.com/vaielab/DuckHuntCss/master/stage.png);
+  background-size: contain;
+  height: 100vh;
+  width: 100vw;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 .duck {
   width: 75px;
@@ -60,18 +65,18 @@ body {
   font-family: pixeloid;
   text-align: center;
 
-    h2 {
-        padding-top: 15px;
-    }
+  h2 {
+    padding-top: 15px;
+  }
 
-    button {
-        width: 100px;
-        height: 50px;
-        margin-top: 25px;
-        font-size: 20px;
-        background-color: black;
-        color: #eb9f22;
-        font-family: pixeloid;
-        border: 2px solid #eb9f22;
-    }
+  button {
+    width: 100px;
+    height: 50px;
+    margin-top: 25px;
+    font-size: 20px;
+    background-color: black;
+    color: #eb9f22;
+    font-family: pixeloid;
+    border: 2px solid #eb9f22;
+  }
 }
